# benchmark_rust_graphql_juniper

./: .gitignore  Cargo.toml  README.md  load_runner.js
src/: main.rs  schema.rs
