[package]
name = "benchmark_rust_graphql_juniper"
version = "0.1.0"
authors = ["Vikram Mishra <vikram.mishra420@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
serde = "1.0.104"
rand = "0.7.2"
serde_json = "1.0.44"
serde_derive = "1.0.104"
juniper = "0.14.2"
fake = { version = "2.2.0", features=['derive','chrono',]}